<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/elephants_logotype2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_elephants"
            app:srcCompat="@drawable/tkvfgnkejoizxoc1ky3woaz7muf3jfrrydapwfxz_ryvwufrov9kboebscbyji50cgeh0kayone0nj3xvnowjdk2"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <ImageView
            android:id="@+id/ducks_logotype2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_ducks"
            app:srcCompat="@drawable/_10761b29f5cace53f565b4943989169" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/score_of_match"
        android:textSize="@dimen/ts_20" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/elephants_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ground"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txt_size"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/second_dot"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txt_size" />
        <TextView
            android:id="@+id/ducks_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ground"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txt_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/elephants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickAddElephants"
            android:text="@string/elephants"
            android:textSize="@dimen/ts_20"
            tools:ignore="ButtonStyle,NestedWeights" />
        <Button
            android:id="@+id/ducks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClickAddDucks"
            android:text="@string/ducks"
            android:textSize="@dimen/ts_20"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="onClickButtonClear"
        android:text="@string/reset_score" />
</LinearLayout>